<resources>
    <string name="app_name">Book Bees</string>
    <string name="welcome_to_start">Welcome to Book Bees</string>
    <string name="new_user">New User</string>
    <string name="main_page">Main Page</string>
    <string name="regSubmit">Register</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_messages">Messages</string>
    <string name="title_find">Find</string>
    <string name="title_profile">Profile</string>
    <string name="loginButton">Login</string>
    <string name="existing_user">Existing User</string>
    <string name="book_bees">Book-Bees</string>
    <string name="next_tour1">Let\'s Go forward</string>
    <string name="next_profile">Next</string>
    <string name="skip_p">Skip</string>
    <string name="next_tour2">Let\'s create a profile for you</string>
    <string name="choose_genre">Choose your favourite genre</string>
    
    <!--Genres-->
    <string name="art">Art</string>
    <string name="adventure">Adventure</string>
    <string name="biograhpy">Biography</string>
    <string name="business">Business</string>
    <string name="classic">Classic</string>
    <string name="comic">Comic</string>
    <string name="crime">Crime</string>
    <string name="fantasy">Fantasy</string>
    <string name="fiction">Fiction</string>
    <string name="historic_fiction">Historic Fiction</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="humourcomedy">Humour</string>
    <string name="memoir">Memoir</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="nonfiction">Non-Fiction</string>
    <string name="philosophy">Philosophy</string>
    <string name="poetry">Peotry</string>
    <string name="psychology">Psychology</string>
    <string name="religion">Religion</string>
    <string name="romance">Romance</string>
    <string name="science">Science</string>
    <string name="scifi">Science Fiction</string>
    <string name="suspense">Suspense</string>
    <string name="spirtuality">Spirtiuality</string>
    <string name="sports">Sports</string>
    <string name="social">Social</string>
    <string name="thriller">Thriller</string>
    <string name="travel">Travel</string>
    <string name="young">Young Adult</string>

    <string name="bio"></string>
    <string name="tv_genres_title">Favorite Genres</string>
    <string name="tv_bio_title">Bio</string>
    <string name="genres_layout_title">Choose Your Favorite Genres!</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tv_library_title">Library</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>

    <string name="profile_name">Profile Name</string>
    <string name="book_swap">Book Swap</string>
    <string name="settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Message Screen</string>
    <string name="hello_blank_fragment1">Search Screen</string>
    <string name="hello_blank_fragment2">Profile Screen</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDNWkv_7nXBZfd2nBN1jUeW7HdpEhYyyAQ</string>

</resources>
