<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/genre_rel_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_genre"
            android:textStyle="bold"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="30sp"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/genre_rel_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genre_rel_1"
        android:layout_margin="5sp">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adventure"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biograhpy"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/classic"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comic"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crime"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fantasy"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiction"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horror"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humourcomedy"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memoir"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mystery"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nonfiction"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poetry"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/philosophy"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psychology"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/religion"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/romance"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scifi"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spirtuality"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspense"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thriller"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/young"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thriller"
                android:layout_marginLeft="20dp"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Travel"
                app:chipBackgroundColor="@color/yellow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"
                android:checked="false"/>

        </com.google.android.material.chip.ChipGroup>
    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/genre_rel_2">

    <Button
        android:id="@+id/next_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="77dp"
        android:text="Next" />

    <Button
        android:id="@+id/skip_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="20sp"
        android:text="Skip" />

</RelativeLayout>



</RelativeLayout>