<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <include layout="@layout/menu_bar" android:id="@+id/registerMenu"/>

    <Button
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="341dp"
        android:text="@string/regSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/disName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/display_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="19dp" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="19dp" />

    <EditText
        android:id="@+id/regPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="227dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="17dp" />
</androidx.constraintlayout.widget.ConstraintLayout>